# tc_message_new

./: CMakeLists.txt  library.h  mgr_message.proto  msg_answer_cbk.cpp  msg_answer_cbk.h  proto_converter.cpp  proto_converter.h  proto_message_maker.cpp  proto_message_maker.h  readme.md  relay_message.proto  rp_proto_converter.cpp  rp_proto_converter.h  tc_client_panel_message.proto  tc_file_transfer.proto  tc_ipc_message.proto  tc_message.pb.cc  tc_message.pb.h  tc_message.proto  tc_render_panel_message.proto  tc_service_message.proto  tc_signaling_message.proto
